@@ -46,7 +46,7 @@ dist_help_DATA = help/apply help/applymode \
 	help/motd help/mouse help/move \
 	help/news help/output \
 	help/output-count help/output-sync \
-	help/party help/peaceful \
+	help/party help/party_rejoin help/peaceful \
 	help/petmode help/pickup help/quests \
 	help/quit help/range help/rename \
 	help/rules \
